--- a/Diarista/packages.config
+++ b/Diarista/packages.config
@@ -1,14 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.0.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
+  <package id="jQuery" version="1.10.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.13" targetFramework="net472" />
   <package id="MySql.Data.Entity" version="6.10.8" targetFramework="net472" />
+  <package id="MySql.Data.EntityFramework" version="8.0.13" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
