Authentication and login page

--- a/Diarista/Web.config
+++ b/Diarista/Web.config
@@ -18,8 +18,11 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Forms">
-      <forms  defaultUrl="/" loginUrl="/authentication/login" name="PROCURA.DIARISTA.AUTH" path="/" protection="All" slidingExpiration="true" ticketCompatibilityMode="Framework40" timeout="180" />
+      <forms defaultUrl="/" loginUrl="/authentication/login" name="DIARISTA.AUTH" path="/" protection="All" slidingExpiration="true" ticketCompatibilityMode="Framework40" timeout="180" />
     </authentication>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
