--- a/Diarista/Web.config
+++ b/Diarista/Web.config
@@ -18,12 +18,20 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Forms">
-      <forms defaultUrl="/" loginUrl="/authentication/login" name="DIARISTA.AUTH" path="/" protection="All" slidingExpiration="true" ticketCompatibilityMode="Framework40" timeout="180" />
+      <forms defaultUrl="/"  loginUrl="/authentication/login" name="DIARISTA.AUTH" path="/" protection="All" slidingExpiration="true" ticketCompatibilityMode="Framework40" timeout="180" />
     </authentication>
     <authorization>
-      <deny users="?"/>
+      <deny users="?" />
     </authorization>
+
   </system.web>
+  <location path="authentication/cadastrar" allowOverride="false">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -56,11 +64,12 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.13.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.13.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
       </provider>
     </providers>
   </entityFramework>
-    <connectionStrings>
+  <connectionStrings>
+    <add name="LocalDbConnection" connectionString="Data Source=(localdb)\mssqllocaldb;Database=procurasediarista;Trusted_Connection=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="DatabaseConnection" connectionString="server=localhost;database=procurasediarista;port=3306;persistsecurityinfo=True;sslmode=None;user id=root;password=root" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.codedom>
