--- a/Diarista/packages.config
+++ b/Diarista/packages.config
@@ -8,11 +8,13 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.6.2" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.13" targetFramework="net472" />
   <package id="MySql.Data.Entity" version="6.10.8" targetFramework="net472" />
   <package id="MySql.Data.EntityFramework" version="8.0.13" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
