--- a/Diarista/Diarista.csproj
+++ b/Diarista/Diarista.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Models\Servico.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\NotificacaoService.cs" />
     <Compile Include="ViewModels\CadastroUsuario.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -182,6 +183,7 @@
     <Content Include="Views\Authentication\TesteLogado.cshtml" />
     <Content Include="Views\Authentication\Cadastrar.cshtml" />
     <Content Include="Views\Servico\Cadastrar.cshtml" />
+    <Content Include="Views\Cliente\Avaliar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
