--- a/Diarista/Diarista.csproj
+++ b/Diarista/Diarista.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\DiaristaController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ServicoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -181,6 +182,7 @@
     <Content Include="Views\Authentication\Cadastrar.cshtml" />
     <Content Include="Views\Servico\Cadastrar.cshtml" />
     <Content Include="Views\Cliente\Avaliar.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
